Improve UnsafeObjectFieldOffset test